[gd_scene load_steps=5 format=3 uid="uid://c7r1l5omxrkdc"]

[ext_resource type="Texture2D" uid="uid://1dc48lq5le0y" path="res://assets/space.png" id="1_0trtj"]
[ext_resource type="Script" path="res://effects/SpaceBackgound.gd" id="1_4nys6"]
[ext_resource type="Texture2D" uid="uid://c8qsfk57dfjq2" path="res://assets/far_stars.png" id="2_yk7y3"]
[ext_resource type="Texture2D" uid="uid://cmwh3ib8cgyxt" path="res://assets/close_stars.png" id="3_v8xla"]

[node name="SpaceBackgound" type="ParallaxBackground"]
script = ExtResource("1_4nys6")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("1_0trtj")
stretch_mode = 1

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Farstars" type="TextureRect" parent="FarStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_yk7y3")
stretch_mode = 1

[node name="CloseStarLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Closestars" type="TextureRect" parent="CloseStarLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_v8xla")
stretch_mode = 1
